# TubeSage

./: .env.example  .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  re_embed_all.py  replit.md  start_agents.py  start_python_server.py  vite.config.ts
attached_assets/: Pasted--Scientific-Discovery-Agent-with-GraphRAG-Integration-This-agent-searches-for-scientific-papers--1750835439863_1750835439864.txt  Pasted-23-22-42-TRANSCRIPT-FETCHER-Failed-to-process-video-qspZyUkolbA-Could-not-retrieve-a-transcript-f-1750832703963_1750832703964.txt  Pasted-23-22-44-TRANSCRIPT-FETCHER-Failed-to-process-video-mzl8uer5qUc-Could-not-retrieve-a-transcript-f-1750833171683_1750833171683.txt  Pasted-5-36-53-TRANSCRIPT-FETCHER-Failed-to-process-video-mock-drbabcock-12-Could-not-retrieve-a-transcr-1750804691776_1750804691777.txt  Pasted-Alena-alena-87226-Online-Gebin-George-6-22-25-12-02-PM-Hey-team-You-re-now-in-your-private--1750791729699_1750791729699.txt  Pasted-Video-ID-m2SW35yaajE-409-error-Video-already-processed-video-id-10-youtubeId-m2SW35ya-1750804667882_1750804667882.txt  Pasted-YouTube-AI-Agent-System-A-sophisticated-multi-agent-YouTube-transcript-processing-system-built-with--1750864428307_1750864428307.txt  Pasted-python-m-uvicorn-python-agent-server-app-host-0-0-0-0-port-8000-Traceback-most-recent-call-las-1750864977948_1750864977948.txt
client/: index.html
server/: alternative-transcript-apis.py  db.ts  index.ts  proxy-transcript.py  python_agent_server.py  real-transcript-service.py  requirements.txt  routes.ts  run_agent_server.py  (+7 more)
(+36 files in other folders)
